@@ -1,3 +1,7 @@
+2007-01-01  Danilo Šegan  <danilo@gnome.org>
+
+	* teams.py: Fix exception when release == None.
+
 2006-12-28  Danilo Šegan  <danilo@gnome.org>
 
 	* teams.py (TranslationTeams.compare_langs): Support .xml on releases.
